# ml-playground

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
rag/utils/: audio.py  chroma.py  env.py  logging_config.py  scrape.py
rag/ver_langchain/: chat_text.py  chat_ui.py  indexer.py  retriever.py
rag/ver_llamaindex/: chat_ui.py  indexer.py  retriever.py
